--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-dom": "^16.6.3",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "solc": "^0.5.0",
-    "web3": "^1.0.0-beta.36"
+    "react-scripts": "^2.1.2",
+    "solc": "^0.4.25",
+    "web3": "^1.0.0-beta.26"
   },
   "scripts": {
     "start": "react-scripts start",
